--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <tr><td colspan=2>
 <p><hr><p>
-I am a member of the <a href="http://www.cs.bham.ac.uk/research/groupings/theory/">Birmingham Theoretical Computer Science group</a>, and my interests include 
+I am a member of the <a href="https://www.birmingham.ac.uk/research/activity/computer-science/theory-of-computation">Birmingham Theoretical Computer Science group</a>, and my interests include 
 <ul>
 <li> semantics of programming languages, including denotational, operational and game semantics
 <li> computational effects, both individually and generally
@@ -40,8 +40,8 @@ My <a href = "http://www.springer.com/computer/swe/book/978-1-4020-1730-8">book 
 <p><hr><p>
 
 <p><hr><p>
-<address><a href="mailto:P.B.1§Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
+<address><a href="mailto:P.B.Levy@bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Thu Mar 19 10:53:31 PST 1998 -->
-<!-- hhmts start -->Last modified: Thu Nov 30 12:02:37 GMT 2023 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Tue Nov 19 15:48:47 GMT 2024 <!-- hhmts end -->
   </body>
 </html>
