--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ I am a member of the <a href="https://www.birmingham.ac.uk/research/activity/com
 <li> semantics of nondeterminism
 <li> category theory, in particular categorical semantics and coalgebra.
 </ul>
-If you're interested in PhD research in any of the above topics, please <a href="mailto:P.B.Levy@cs.bham.ac.uk">contact me</a>. <p>
+If you're interested in PhD research in any of the above topics, please <a href="mailto:P.B.Levy@bham.ac.uk">contact me</a>. <p>
 
 <p><hr><p>
 </td>
@@ -42,6 +42,6 @@ My <a href = "http://www.springer.com/computer/swe/book/978-1-4020-1730-8">book 
 <p><hr><p>
 <address><a href="mailto:P.B.Levy@bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Thu Mar 19 10:53:31 PST 1998 -->
-<!-- hhmts start -->Last modified: Tue Nov 19 15:48:47 GMT 2024 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Tue Nov 19 16:02:20 GMT 2024 <!-- hhmts end -->
   </body>
 </html>
