--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <a href="http://www.cs.bham.ac.uk">School of Computer Science</a>, <a href="http://www.birmingham.ac.uk">University of Birmingham</a> <br>
   Edgbaston, Birmingham, B15 2TT, UK <br>
   phone: +44 121 414 4792 <br>
-  email: <A HREF="mailto:P.B.Levy@cs.bham.ac.uk"><B>P.B.Levy@cs.bham.ac.uk</B></A> <br><br>
+  email: <A HREF="mailto:P.B.Levy@bham.ac.uk"><B>P.B.Levy@bham.ac.uk</B></A> <br><br>
 
 
 <tr><td colspan=2>
@@ -42,6 +42,6 @@ My <a href = "http://www.springer.com/computer/swe/book/978-1-4020-1730-8">book 
 <p><hr><p>
 <address><a href="mailto:P.B.Levy@bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Thu Mar 19 10:53:31 PST 1998 -->
-<!-- hhmts start -->Last modified: Tue Nov 19 16:02:20 GMT 2024 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Wed Nov 20 00:11:04 GMT 2024 <!-- hhmts end -->
   </body>
 </html>
