more http changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <tr><td colspan=2>
 <p><hr><p>
-I am a member of the <a href="www.birmingham.ac.uk/research/activity/computer-science/theory-of-computation">Birmingham Theoretical Computer Science group</a>, and my interests include 
+I am a member of the <a href="//www.birmingham.ac.uk/research/activity/computer-science/theory-of-computation">Birmingham Theoretical Computer Science group</a>, and my interests include 
 <ul>
 <li> semantics of programming languages, including denotational, operational and game semantics
 <li> computational effects, both individually and generally
@@ -36,12 +36,12 @@ If you're interested in PhD research in any of the above topics, please <a href=
 <a href="papers/index.html#manuscripts">Manuscripts</a><br>
 <a href="papers/index.html#slides">Slides<a><br>
 Course notes on <a href="mgsall.pdf">typed &lambda;-calculus</a> and <a href="coalglect.pdf">coalgebra</a> and <a href ="mgsfastlam.pdf">effects and call-by-push-value</a> from <a href="http://www.cs.nott.ac.uk/MGS/">Midlands Graduate School</a> <br>
-My <a href = "http://www.springer.com/computer/swe/book/978-1-4020-1730-8">book on call-by-push-value</a><br> 
+My <a href = "//http://www.springer.com/computer/swe/book/978-1-4020-1730-8">book on call-by-push-value</a><br> 
 <p><hr><p>
 
 <p><hr><p>
 <address><a href="mailto:P.B.Levy@bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Thu Mar 19 10:53:31 PST 1998 -->
-<!-- hhmts start -->Last modified: Wed Nov 20 00:21:02 GMT 2024 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Wed Nov 20 00:24:12 GMT 2024 <!-- hhmts end -->
   </body>
 </html>
