more http changes again

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@ If you're interested in PhD research in any of the above topics, please <a href=
 <a href="papers/index.html">Papers</a> <br>
 <a href="papers/index.html#manuscripts">Manuscripts</a><br>
 <a href="papers/index.html#slides">Slides<a><br>
-Course notes on <a href="mgsall.pdf">typed &lambda;-calculus</a> and <a href="coalglect.pdf">coalgebra</a> and <a href ="mgsfastlam.pdf">effects and call-by-push-value</a> from <a href="http://www.cs.nott.ac.uk/MGS/">Midlands Graduate School</a> <br>
-My <a href = "//http://www.springer.com/computer/swe/book/978-1-4020-1730-8">book on call-by-push-value</a><br> 
+Course notes on <a href="mgsall.pdf">typed &lambda;-calculus</a> and <a href="coalglect.pdf">coalgebra</a> and <a href ="mgsfastlam.pdf">effects and call-by-push-value</a> from <a href="//www.cs.nott.ac.uk/MGS/">Midlands Graduate School</a> <br>
+My <a href = "//www.springer.com/computer/swe/book/978-1-4020-1730-8">book on call-by-push-value</a><br> 
 <p><hr><p>
 
 <p><hr><p>
 <address><a href="mailto:P.B.Levy@bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Thu Mar 19 10:53:31 PST 1998 -->
-<!-- hhmts start -->Last modified: Wed Nov 20 00:24:12 GMT 2024 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Wed Nov 20 00:25:00 GMT 2024 <!-- hhmts end -->
   </body>
 </html>
