--- a/papers/index.html
+++ b/papers/index.html
@@ -77,23 +77,23 @@ J.M.E.Hyland, P.B.Levy, G.D.Plotkin and A.J.Power. <b>Combining algebraic effect
 P.B.Levy. <b>Call-by-push-value: decomposing call-by-value and call-by-name</b> [<a href="hosc05.pdf">Preprint</a>], Higher-Order and Symbolic Computation, <a href="http://dx.doi.org/10.1007/s10990-006-0480-6">vol. 19(4)</a>, pages 377-414, December 2006 &copy Springer.
 <p>
 
-P.B.Levy. <b>Jumbo lambda-calculus</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/jumboicalp.pdf">Preprint</a>] LNCS vol. 4052, M. Bugliesi, B. Preneel, V. Sassone, I. Wegener (eds.),  Proceedings, <a href="http://icalp06.dsi.unive.it/">33rd International Colloquium on Automata, Languages and Programming, Track B</a>, Venice, Italy, July 2006, Part 2, pages 444-455 &copy <a href="http://dx.doi.org/10.1007/11787006_38"> Springer</a>. <p>  
+P.B.Levy. <b>Jumbo lambda-calculus</b> [<a href="jumboicalp.pdf">Preprint</a>] LNCS vol. 4052, M. Bugliesi, B. Preneel, V. Sassone, I. Wegener (eds.),  Proceedings, <a href="http://icalp06.dsi.unive.it/">33rd International Colloquium on Automata, Languages and Programming, Track B</a>, Venice, Italy, July 2006, Part 2, pages 444-455 &copy <a href="http://dx.doi.org/10.1007/11787006_38"> Springer</a>. <p>  
 
-P.B.Levy. <b>Monads and adjunctions for global exceptions</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/exceptions.pdf">Preprint</a>] Proceedings,  <a href="http://www.math.tulane.edu/~mfps/mfps22.htm">22nd Conference on the Mathematical Foundations of Programming Semantics</a>, Genoa, Italy, May 2006, <a href="http://dx.doi.org/10.1016/j.entcs.2006.04.014">Entcs</a>, volume 158, pages 261-287 (article 14)  &copy Elsevier. <p>
+P.B.Levy. <b>Monads and adjunctions for global exceptions</b> [<a href="exceptions.pdf">Preprint</a>] Proceedings,  <a href="http://www.math.tulane.edu/~mfps/mfps22.htm">22nd Conference on the Mathematical Foundations of Programming Semantics</a>, Genoa, Italy, May 2006, <a href="http://dx.doi.org/10.1016/j.entcs.2006.04.014">Entcs</a>, volume 158, pages 261-287 (article 14)  &copy Elsevier. <p>
 
-P.B.Levy. <b>Infinitary Howe's method</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/howewriteup.pdf">Preprint</a>] Proceedings, <a href="http://conferences.inf.ed.ac.uk/cmcs06/cmcs06.html">8th International Workshop on Coalgebraic Methods in Computer Science</a>, Vienna, Austria, March 2006, <a href="http://www.elsevier.com/gej-ng/31/29/23/show/Products/notes/contents.htt">ENTCS</a> volume 164, issue 1, pages 85-104 (article 6) &copy Elsevier. <p>
+P.B.Levy. <b>Infinitary Howe's method</b> [<a href="howewriteup.pdf">Preprint</a>] Proceedings, <a href="http://conferences.inf.ed.ac.uk/cmcs06/cmcs06.html">8th International Workshop on Coalgebraic Methods in Computer Science</a>, Vienna, Austria, March 2006, <a href="http://www.elsevier.com/gej-ng/31/29/23/show/Products/notes/contents.htt">ENTCS</a> volume 164, issue 1, pages 85-104 (article 6) &copy Elsevier. <p>
 
-P.B.Levy. <b>Jumping semantics for call-by-push-value</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/jumpsem.pdf">Preprint</a>], O. Danvy and H. Thielecke eds., Proceedings, <a href="http://www.cs.bham.ac.uk/~hxt/kazam/">KAZAM Workshop</a>, Birmingham, U.K., June 2005, University of Birmingham technical report <a href="ftp://ftp.cs.bham.ac.uk/pub/tech-reports/2006/CSR-06-10.ps.gz">CSR-06-10</a> (appeared 2006), pages 27-40. <p>
+P.B.Levy. <b>Jumping semantics for call-by-push-value</b> [<a href="jumpsem.pdf">Preprint</a>], O. Danvy and H. Thielecke eds., Proceedings, <a href="http://www.cs.bham.ac.uk/~hxt/kazam/">KAZAM Workshop</a>, Birmingham, U.K., June 2005, University of Birmingham technical report <a href="ftp://ftp.cs.bham.ac.uk/pub/tech-reports/2006/CSR-06-10.ps.gz">CSR-06-10</a> (appeared 2006), pages 27-40. <p>
 
-P.B.Levy. <b>Infinite trace equivalence</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/mfpsinftrace.pdf">Preprint</a>]  Proceedings, <a href="http://events.cs.bham.ac.uk/mfps21/">21st Conference on the Mathematical Foundations of Programming Semantics</a>, Birmingham, U.K., June 2005, <a href="http://dx.doi.org/10.1016/j.entcs.2005.11.069">ENTCS</a> volume 155 (published 2006), pages 467-496 (article 22)  &copy Elsevier. <p>
+P.B.Levy. <b>Infinite trace equivalence</b> [<a href="mfpsinftrace.pdf">Preprint</a>]  Proceedings, <a href="http://events.cs.bham.ac.uk/mfps21/">21st Conference on the Mathematical Foundations of Programming Semantics</a>, Birmingham, U.K., June 2005, <a href="http://dx.doi.org/10.1016/j.entcs.2005.11.069">ENTCS</a> volume 155 (published 2006), pages 467-496 (article 22)  &copy Elsevier. <p>
 
 J.M.E.Hyland, P.B.Levy, G.D.Plotkin and A.J.Power. <b>Combining continuations with other effects</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/comb_cont.ps">Preprint</a>] <a href="http://www.cs.bham.ac.uk/~hxt/cw04/index.html"> 4th ACM-SIGPLAN Continuation Workshop</a>, Venice, Italy, January 2004.<p>
 
-P.B.Levy, A.J.Power and H.Thielecke. <b>Modelling environments in call-by-value programming languages</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/johnhayopaul2.ps">Preprint</a>] &copy Elsevier, Information and Computation, 2003, vol. 185, pp. 182-210.
+P.B.Levy, A.J.Power and H.Thielecke. <b>Modelling environments in call-by-value programming languages</b> [<a href="johnhayopaul2.ps">Preprint</a>] &copy Elsevier, Information and Computation, 2003, vol. 185, pp. 182-210.
 <p>
 
 P.B.Levy. <b>Possible world semantics for general storage in call-by-value</b>
-[<a href="http://www.cs.bham.ac.uk/~pbl/papers/storagecbv.ps">Preprint</a>]  LNCS vol. 2471 , J. Bradfield ed., Proceedings,
+[<a href="storagecbv.ps">Preprint</a>]  LNCS vol. 2471 , J. Bradfield ed., Proceedings,
  <a href="http://www.dcs.ed.ac.uk/csl02/">Computer Science Logic</a>, Edinburgh, September 2002, pages 232-246 &copy 
  <A HREF="http://www.springerlink.com/content/h01jwyjel21g5wd3/?p=a64575f9a2c44671bc90117a58348c8e&pi=15">Springer</a>.
 <p>
@@ -102,17 +102,17 @@ P.B.Levy. <a href="http://www.tac.mta.ca/tac/volumes/14/5/14-05abs.html"> <b>Adj
 <p>
 
 P.B.Levy. <b>Adjunction models for call-by-push-value with stacks</b>
- [<a href="http://www.cs.bham.ac.uk/~pbl/papers/ctcs02.ps">Preprint</a>]
+ [<a href="ctcs02.ps">Preprint</a>]
  Proceedings, <a href="http://www.mathstat.uottawa.ca/lfc/ctcs2002/">Category Theory in Computer Science 2002</a>, Ottawa, August 2002, <A HREF = "http://www.elsevier.com/gej-ng/31/29/23/show/Products/notes/contents.htt">ENTCS</A> vol. 69, article 13 &copy Elsevier.
 <p> 
 
 P.B,Levy. <a href="http://www.springer.com/uk/home?SGWID=3-102-22-33666497-0&changeHeader=true&referer=www.wkap.nl&SHORTCUT=www.springer.com/prod/b/1-4020-1730-8"><b>Call-by-push-value.  A functional/imperative synthesis</b></a>, Semantic Structures in Computation, &copy Springer, 2004.
 <p>
 
-P.B.Levy. <a href="http://www.cs.bham.ac.uk/~pbl/papers/thesisqmwphd.pdf  "> <b>Call-by-push-value</b></a> PhD thesis, Queen Mary, University of London, 2001.  <p>
+P.B.Levy. <a href="thesisqmwphd.pdf  "> <b>Call-by-push-value</b></a> PhD thesis, Queen Mary, University of London, 2001.  <p>
 
 P.B.Levy. <b>Call-By-Push-Value: A Subsuming Paradigm (Extended Abstract)</b>
-[<A HREF="http://www.cs.bham.ac.uk/~pbl/papers/tlca99.pdf">Preprint</A>]
+[<A HREF="tlca99.pdf">Preprint</A>]
  LNCS vol. 1581, J.-Y. Girard, ed.,
 Proceedings, Typed Lambda-Calculi and Applications, L'Aquila, Italy,
     April 1999, pages 228-242 &copy 
@@ -124,7 +124,7 @@ Springer</A>.
 
 M. Kerjean, P.B.Levy, eds.  <a href="https://entics.episciences.org/volume/view/id/752">Proceedings</a> of the <b><a href="https://coalg.org/calco-mfps-2023/mfps/">39th Conference on  Mathematical Foundations of Programming Semantics</a></b>, Bloomington, Indiana, USA, June 2023.  Volume 3 of ENTICS. <p>
 
-N. Krishnaswami, P.B.Levy, eds.  <a href="http://eptcs.org/content.cgi?MSFP2014">Proceedings</a> of the <b><a href="http://www.cs.bham.ac.uk/~pbl/msfp2014/index.html">5th workshop on Mathematically Structured Functional Programming</a></b>, Grenoble, France, April 2014.  Volume 153 of EPTCS. <p>
+N. Krishnaswami, P.B.Levy, eds.  <a href="http://eptcs.org/content.cgi?MSFP2014">Proceedings</a> of the <b><a href="../msfp2014/index.html">5th workshop on Mathematically Structured Functional Programming</a></b>, Grenoble, France, April 2014.  Volume 153 of EPTCS. <p>
 
 
 J.M.Chapman, P.B.Levy, eds.  <a href="http://eptcs.org/content.cgi?MSFP2012">Proceedings</a> of the <b><a href="http://cs.ioc.ee/msfp/msfp2012/">4th workshop on Mathematically Structured Functional Programming</a></b>, Tallinn, Estonia, March 2012.  Volume 76 of EPTCS. <p>
@@ -142,8 +142,8 @@ P.B.Levy <b> Thunkable implies central </b> [<a href="thunkcentral.pdf">pdf</a>]
 S.B.Lassen, P.B.Levy, P.Panangaden. <b> Divergence-least semantics of amb is Hoare </b> [<a href="ambdivleast.pdf">pdf</a>]. Short presentation at the  <a href="http://www.tcs.informatik.uni-muenchen.de/~mhofmann/appsem2/">3rd APPSEM II workshop</a>, September 2005, Frauenchiemsee, Germany.  <p>
 P.B.Levy. <b>Martin-L&ouml;f clashes with Griffin, operationally </b> [<a href="mlofgriff.pdf">pdf</a>] <p>
 
-S.B.Lassen and P.B.Levy. <b> Some parametricity isomorphisms </b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/someisos.pdf">pdf</a>] <p>
-P.B.Levy. <b> Modal properties of recursively defined commands (work in progress) </b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/domains08abs.pdf">pdf</a>] to be presented at <a href="http://www.informatics.sussex.ac.uk/events/domains9/">Domains IX</a> <p>
+S.B.Lassen and P.B.Levy. <b> Some parametricity isomorphisms </b> [<a href="someisos.pdf">pdf</a>] <p>
+P.B.Levy. <b> Modal properties of recursively defined commands (work in progress) </b> [<a href="domains08abs.pdf">pdf</a>] to be presented at <a href="http://www.informatics.sussex.ac.uk/events/domains9/">Domains IX</a> <p>
 P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
 
 
@@ -152,13 +152,13 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
 
 <p>
 
-<b>The price of mathematical scepticism</b>  [<a href="http://www.cs.bham.ac.uk/~pbl/papers/sceptic.pdf">pdf</a>] <p>
+<b>The price of mathematical scepticism</b>  [<a href="sceptic.pdf">pdf</a>] <p>
 
-<b>Locally graded categories</b>  [<a href="http://www.cs.bham.ac.uk/~pbl/papers/locgrade.pdf">pdf</a>] <p>
+<b>Locally graded categories</b>  [<a href="locgrade.pdf">pdf</a>] <p>
 
-<b>Adjunction semantics for call-by-push-value</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/adjuncttalk.pdf">pdf</a>] <p>
+<b>Adjunction semantics for call-by-push-value</b> [<a href="adjuncttalk.pdf">pdf</a>] <p>
 
-<b>Amb breaks well-pointedness,  ground amb doesn't </b>[<a href="http://www.cs.bham.ac.uk/~pbl/papers/ambtalk.pdf">pdf</a>]<p>
+<b>Amb breaks well-pointedness,  ground amb doesn't </b>[<a href="ambtalk.pdf">pdf</a>]<p>
 
 <b>Nondeterminism, fixpoints and bisimulation </b> [<a href="nondetsurvey.pdf">pdf</a>] <p>
 
@@ -182,7 +182,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Thu Aug  8 12:08:12 BST 2024 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Wed Nov 20 01:47:03 GMT 2024 <!-- hhmts end -->
   </body>
 </html>
 
