--- a/papers/index.html
+++ b/papers/index.html
@@ -66,7 +66,7 @@ S.B.Lassen and P.B.Levy. <b>Typed normal form bisimulation for parametric polymo
 
 P.B.Levy. <b>Global state considered helpful</b> [<a href="globalhelp.pdf">Preprint</a>] Proceedings, <a href="http://www.math.tulane.edu/~mfps/mfps24-site/">24th conference on the Mathematical Foundations of Programming Semantics</a>, University of Pennsylvania, Philadelphia PA USA, May 2008, <a href="http://dx.doi.org/10.1016/j.entcs.2008.10.015">ENTCS</a>, volume 218, pages 241-259 (article 15) &copy Elsevier. <p>
 
-P.B.Levy. <b>Infinite trace equivalence</b> [<a href="finalglpljourn.pdf">Preprint</a>] Annals of Pure and Applied Logic</a>, vol. 151(2-3), pages 170-198, February 2008, special issue for for <a href="http://www.cs.bham.ac.uk/~drg/galop05.html">GaLoP 2005</a> &copy <a href="http://dx.doi.org/10.1016/j.apal.2007.10.007">Elsevier</a>. <p>
+P.B.Levy. <b>Infinite trace equivalence</b> [<a href="finalglpljourn.pdf">Preprint</a>] Annals of Pure and Applied Logic</a>, vol. 151(2-3), pages 170-198, February 2008, special issue for for the 1st workshop on Games for Logic and Programming (GaLoP) 2005 &copy <a href="http://dx.doi.org/10.1016/j.apal.2007.10.007">Elsevier</a>. <p>
 
 S.B.Lassen and P.B.Levy. <b>Typed normal form bisimulation</b> [<a href="LassenLevy2007tnfb-4.pdf">Preprint</a>].  LNCS vol. 4646, J. Duparc and T. A. Henzinger (eds.), Proceedings of the <a href="http://www2.unil.ch/csl07/">6th EACSL Annual Conference on Computer Science and Logic</A> (CSL 07), Lausanne, Switzerland, September 2007, pages 283-297 &copy <a href="http://dx.doi.org/10.1007/978-3-540-74915-8_23"> Springer</a>. <p>
 
@@ -83,9 +83,9 @@ P.B.Levy. <b>Monads and adjunctions for global exceptions</b> [<a href="exceptio
 
 P.B.Levy. <b>Infinitary Howe's method</b> [<a href="howewriteup.pdf">Preprint</a>] Proceedings, <a href="http://conferences.inf.ed.ac.uk/cmcs06/cmcs06.html">8th International Workshop on Coalgebraic Methods in Computer Science</a>, Vienna, Austria, March 2006, <a href="http://www.elsevier.com/gej-ng/31/29/23/show/Products/notes/contents.htt">ENTCS</a> volume 164, issue 1, pages 85-104 (article 6) &copy Elsevier. <p>
 
-P.B.Levy. <b>Jumping semantics for call-by-push-value</b> [<a href="jumpsem.pdf">Preprint</a>], O. Danvy and H. Thielecke eds., Proceedings, <a href="http://www.cs.bham.ac.uk/~hxt/kazam/">KAZAM Workshop</a>, Birmingham, U.K., June 2005, University of Birmingham technical report <a href="ftp://ftp.cs.bham.ac.uk/pub/tech-reports/2006/CSR-06-10.ps.gz">CSR-06-10</a> (appeared 2006), pages 27-40. <p>
+P.B.Levy. <b>Jumping semantics for call-by-push-value</b> [<a href="jumpsem.pdf">Preprint</a>], O. Danvy and H. Thielecke eds., Proceedings, KAZAM Workshop, Birmingham, U.K., June 2005, University of Birmingham technical report CSR-06-10 (appeared 2006), pages 27-40. <p>
 
-P.B.Levy. <b>Infinite trace equivalence</b> [<a href="mfpsinftrace.pdf">Preprint</a>]  Proceedings, <a href="http://events.cs.bham.ac.uk/mfps21/">21st Conference on the Mathematical Foundations of Programming Semantics</a>, Birmingham, U.K., June 2005, <a href="http://dx.doi.org/10.1016/j.entcs.2005.11.069">ENTCS</a> volume 155 (published 2006), pages 467-496 (article 22)  &copy Elsevier. <p>
+P.B.Levy. <b>Infinite trace equivalence</b> [<a href="mfpsinftrace.pdf">Preprint</a>]  Proceedings, 21st Conference on the Mathematical Foundations of Programming Semantics, Birmingham, U.K., June 2005, <a href="http://dx.doi.org/10.1016/j.entcs.2005.11.069">ENTCS</a> volume 155 (published 2006), pages 467-496 (article 22)  &copy Elsevier. <p>
 
 J.M.E.Hyland, P.B.Levy, G.D.Plotkin and A.J.Power. <b>Combining continuations with other effects</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/comb_cont.ps">Preprint</a>] <a href="http://www.cs.bham.ac.uk/~hxt/cw04/index.html"> 4th ACM-SIGPLAN Continuation Workshop</a>, Venice, Italy, January 2004.<p>
 
@@ -182,7 +182,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Wed Nov 20 01:47:03 GMT 2024 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Wed Nov 20 01:55:08 GMT 2024 <!-- hhmts end -->
   </body>
 </html>
 
