--- a/mgs/index.html
+++ b/mgs/index.html
@@ -196,7 +196,7 @@ GSEM Game semantics for software verification, <a href="http://www.cs.bham.ac.uk
 
     <p>A number of (non en-suite) rooms have been reserved in <A
     href="http://www.conferences.bham.ac.uk/vac-accom/chamberlain.htm">Chamberlain
-    Hall</A>. The costs are £25 for bed and breakfast. You have to
+    Hall</A>. The costs are &#163;25 for bed and breakfast. You have to
     book the accommodation together with your registration, and rooms
     will be assigned on a first-come, first-served basis.</p>
 
@@ -234,7 +234,7 @@ GSEM Game semantics for software verification, <a href="http://www.cs.bham.ac.uk
 
     <h2>Costs</h2>
 
-    <p>Apart from the accommodation costs, there is a small fee of £40
+    <p>Apart from the accommodation costs, there is a small fee of &#163;40
       to cover local expenses. If you wish to take advantage of the
       accommodation in Chamberlain Hall, then you must pay in advance,
       either by credit card or by cheque. See the registration section
