--- a/mgs/coalgebra/index.html
+++ b/mgs/coalgebra/index.html
@@ -5,7 +5,10 @@
   </head>
 
   <body>
-    <h2>Coalgebra</h2> 
+    <h3>Midlands Graduate School 7&ndash;11 April 2025,
+    University of Sheffield.</h3>
+
+<h1> Coalgebra </h1>
 <br><br>
 
 
