--- a/mgs/coalgebra/index.html
+++ b/mgs/coalgebra/index.html
@@ -9,6 +9,19 @@
     University of Sheffield.</h3>
 
 <h1> Coalgebra </h1>
+
+
+State transition systems are widespread in computer science. Coalgebra
+is a more abstract approach to these transition systems. 
+
+<p> First we shall see what a coalgebra is, and a number of examples involving input, output, nondeterminism, divergence and (discrete) probability. In particular, we look at final coalgebras, which are used to represent data types such as lazy lists and lazy trees.
+We look at various kinds of simulation and bisimulation, and see how they can be brought together using the notion of a relator.
+Finally we see that simulation and bisimulation can be characterized
+using a final coalgebra, and conversely that we can construct a final
+coalgebra by taking an extensional quotient. </p>
+
+<p> Here are the <a href="~/coalgebra.pdf">course notes</a>.
+
 <br><br>
 
 
