--- a/mgs/coalgebra/index.html
+++ b/mgs/coalgebra/index.html
@@ -20,7 +20,7 @@ Finally we see that simulation and bisimulation can be characterized
 using a final coalgebra, and conversely that we can construct a final
 coalgebra by taking an extensional quotient. </p>
 
-<p> Here is a draft of the <a href="./coalglect.pdf">course notes</a>.
+<p> Here is a draft of the <a href="../../coalglect.pdf">course notes</a>.
 
 <br><br>
 
