--- a/papers/index.html
+++ b/papers/index.html
@@ -9,6 +9,12 @@
 
 <br> 
 
+
+
+P.B.Levy <b> Broad Infinity and Generation Principles </b>
+[<a href="https://doi.org/10.1215/00294527-2024-0029">pdf</a>] Notre Dame Journal of Formal Logic, volume 66(1), pages 79--141. [<a href="newgrowsafe.pdf">Preprint</a>] <p>
+
+
 P.B.Levy. <a href ="https://doi.org/10.1093/philmat/nkac011"><b> The Price of Mathematical Scepticism</b></a>, Philosophia Mathematica, volume 30(3), pages 283-305, 2022 &copy Oxford Academic. [<a href="allornothing.pdf">Preprint</a>] <p>
 
 P.B.Levy. <b> Semantics Column: Call-By-Push-Value </b> [<a href="siglogcbpv2.pdf">Preprint</a>], in <a href="https://dl.acm.org/toc/siglog/2022/9/2">ACM SIGLOG News 9(2)</a> pages 7-29, 2022.  With an introduction by Mike Mislove.  <p>
@@ -132,10 +138,6 @@ J.M.Chapman, P.B.Levy, eds.  <a href="http://eptcs.org/content.cgi?MSFP2012">Pro
 <H2 id = "manuscripts">Manuscripts</h2>
 
 
-
-P.B.Levy <b> Broad Infinity and Generation Principles </b>
-[<a href="newgrowsafe.pdf">pdf</a>] <p>
-
 P.B.Levy <b> Thunkable implies central </b> [<a href="thunkcentral.pdf">pdf</a>]
 <p>
 
@@ -182,7 +184,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Wed Nov 20 01:55:08 GMT 2024 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 18:55:43 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
