--- a/papers/index.html
+++ b/papers/index.html
@@ -11,8 +11,7 @@
 
 
 
-P.B.Levy <b> Broad Infinity and Generation Principles </b>
-[<a href="https://doi.org/10.1215/00294527-2024-0029">pdf</a>] Notre Dame Journal of Formal Logic, volume 66(1), pages 79--141. [<a href="newgrowsafe.pdf">Preprint</a>] <p>
+P.B.Levy<a href="https://doi.org/10.1215/00294527-2024-0029"><b>Broad Infinity and Generation Principles</b></a>, Notre Dame Journal of Formal Logic, volume 66(1), pages 79--141, 2025 &copy University of Notre Dame. [<a href="newgrowsafe.pdf">Preprint</a>] <p>
 
 
 P.B.Levy. <a href ="https://doi.org/10.1093/philmat/nkac011"><b> The Price of Mathematical Scepticism</b></a>, Philosophia Mathematica, volume 30(3), pages 283-305, 2022 &copy Oxford Academic. [<a href="allornothing.pdf">Preprint</a>] <p>
@@ -21,9 +20,9 @@ P.B.Levy. <b> Semantics Column: Call-By-Push-Value </b> [<a href="siglogcbpv2.pd
 
 B. Jacobs, P.B.Levy, J.Rot. <a href="https://doi.org/10.1093/logcom/exab050"><b>Steps and Traces</b></a>, Journal of Logic and Computation 31(6), pages 1482-1525, 2021.  This is an expanded version of the paper [<a href="stepstraces.pdf">Preprint</a>] in CMCS 2018, which appeared in LNCS 11202 &copy Springer. <p>
 
-P.B.Levy.  <b>Strong functors on many-sorted sets</b> [<a href="newtrnkova.pdf">Preprint</a>] Commentationes Mathematicae Universitatis Carolinae 60(4) (2019), special issue in memory of V&#283;ra Trnkov&aacute;. <p>
+P.B.Levy. <a href="https://doi.org/10.14712/1213-7243.2019.029"><b>Strong functors on many-sorted sets</b></a>, Commentationes Mathematicae Universitatis Carolinae 60(4) (2019), special issue in memory of V&#283;ra Trnkov&aacute;. <p>
 
-P.B.Levy, S.Goncharov.  <a href="https://drops.dagstuhl.de/opus/volltexte/2019/11441/"><b> Coinductive Resumption Monads: Guarded Iterative and Guarded Elgot </b></a> Proceedings, 8th Conference on Algebra and Coalgebra in Computer Science (CALCO) 2019. <p>
+P.B.Levy, S.Goncharov.  <a href="https://doi.org/10/4230/LIPIcs.CALCO.2019.13"><b> Coinductive Resumption Monads: Guarded Iterative and Guarded Elgot </b></a> Proceedings, 8th Conference on Algebra and Coalgebra in Computer Science (CALCO) 2019. <p>
 
 N.Bowler, P.B.Levy, G.D.Plotkin. <a href="https://www.sciencedirect.com/science/article/pii/S1571066118300835?via%3Dihub"><b>Initial algebras and final coalgebras consisting of nondeterministic finite trace strategies</b></a> 34th conference on the Mathematical Foundations of Programming Semantics, 2018.   &copy Elsevier. <p>
 
@@ -95,7 +94,7 @@ P.B.Levy. <b>Infinite trace equivalence</b> [<a href="mfpsinftrace.pdf">Preprint
 
 J.M.E.Hyland, P.B.Levy, G.D.Plotkin and A.J.Power. <b>Combining continuations with other effects</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/comb_cont.ps">Preprint</a>] <a href="http://www.cs.bham.ac.uk/~hxt/cw04/index.html"> 4th ACM-SIGPLAN Continuation Workshop</a>, Venice, Italy, January 2004.<p>
 
-P.B.Levy, A.J.Power and H.Thielecke. <b>Modelling environments in call-by-value programming languages</b> [<a href="johnhayopaul2.ps">Preprint</a>] &copy Elsevier, Information and Computation, 2003, vol. 185, pp. 182-210.
+P.B.Levy, A.J.Power and H.Thielecke. <b><a href="http://dx.doi.org/10.1016/S0890-5401(03)00088-9">Modelling environments in call-by-value programming languages</a></b> &copy Elsevier, Information and Computation, 2003, vol. 185, pp. 182-210.
 <p>
 
 P.B.Levy. <b>Possible world semantics for general storage in call-by-value</b>
@@ -184,7 +183,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 18:55:43 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 19:10:46 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
