--- a/papers/index.html
+++ b/papers/index.html
@@ -11,7 +11,7 @@
 
 
 
-P.B.Levy<a href="https://doi.org/10.1215/00294527-2024-0029"><b>Broad Infinity and Generation Principles</b></a>, Notre Dame Journal of Formal Logic, volume 66(1), pages 79--141, 2025 &copy University of Notre Dame. [<a href="newgrowsafe.pdf">Preprint</a>] <p>
+P.B.Levy. <a href="https://doi.org/10.1215/00294527-2024-0029"><b>Broad Infinity and Generation Principles</b></a>, Notre Dame Journal of Formal Logic, volume 66(1), pages 79--141, 2025 &copy University of Notre Dame. [<a href="newgrowsafe.pdf">Preprint</a>] <p>
 
 
 P.B.Levy. <a href ="https://doi.org/10.1093/philmat/nkac011"><b> The Price of Mathematical Scepticism</b></a>, Philosophia Mathematica, volume 30(3), pages 283-305, 2022 &copy Oxford Academic. [<a href="allornothing.pdf">Preprint</a>] <p>
@@ -22,7 +22,7 @@ B. Jacobs, P.B.Levy, J.Rot. <a href="https://doi.org/10.1093/logcom/exab050"><b>
 
 P.B.Levy. <a href="https://doi.org/10.14712/1213-7243.2019.029"><b>Strong functors on many-sorted sets</b></a>, Commentationes Mathematicae Universitatis Carolinae 60(4) (2019), special issue in memory of V&#283;ra Trnkov&aacute;. <p>
 
-P.B.Levy, S.Goncharov.  <a href="https://doi.org/10/4230/LIPIcs.CALCO.2019.13"><b> Coinductive Resumption Monads: Guarded Iterative and Guarded Elgot </b></a> Proceedings, 8th Conference on Algebra and Coalgebra in Computer Science (CALCO) 2019. <p>
+P.B.Levy, S.Goncharov.  <a href="https://doi.org/10.4230/LIPIcs.CALCO.2019.13"><b> Coinductive Resumption Monads: Guarded Iterative and Guarded Elgot </b></a> Proceedings, 8th Conference on Algebra and Coalgebra in Computer Science (CALCO) 2019. <p>
 
 N.Bowler, P.B.Levy, G.D.Plotkin. <a href="https://www.sciencedirect.com/science/article/pii/S1571066118300835?via%3Dihub"><b>Initial algebras and final coalgebras consisting of nondeterministic finite trace strategies</b></a> 34th conference on the Mathematical Foundations of Programming Semantics, 2018.   &copy Elsevier. <p>
 
@@ -183,7 +183,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 19:10:46 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 19:14:40 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
