--- a/papers/index.html
+++ b/papers/index.html
@@ -11,10 +11,10 @@
 
 
 
-P.B.Levy. <a href="https://doi.org/10.1215/00294527-2024-0029"><b>Broad Infinity and Generation Principles</b></a>, Notre Dame Journal of Formal Logic, volume 66(1), pages 79--141, 2025 &copy University of Notre Dame. [<a href="newgrowsafe.pdf">Preprint</a>] <p>
+P.B.Levy. <a href="https://doi.org/10.1215/00294527-2024-0029"><b>Broad Infinity and Generation Principles</b></a> [<a href="newgrowsafe.pdf">Preprint</a>], Notre Dame Journal of Formal Logic, volume 66(1), pages 79--141, 2025 &copy University of Notre Dame. <p>
 
 
-P.B.Levy. <a href ="https://doi.org/10.1093/philmat/nkac011"><b> The Price of Mathematical Scepticism</b></a>, Philosophia Mathematica, volume 30(3), pages 283-305, 2022 &copy Oxford Academic. [<a href="allornothing.pdf">Preprint</a>] <p>
+P.B.Levy. <a href ="https://doi.org/10.1093/philmat/nkac011"><b> The Price of Mathematical Scepticism</b></a> [<a href="allornothing.pdf">Preprint</a>], Philosophia Mathematica, volume 30(3), pages 283-305, 2022 &copy Oxford Academic. <p>
 
 P.B.Levy. <b> Semantics Column: Call-By-Push-Value </b> [<a href="siglogcbpv2.pdf">Preprint</a>], in <a href="https://dl.acm.org/toc/siglog/2022/9/2">ACM SIGLOG News 9(2)</a> pages 7-29, 2022.  With an introduction by Mike Mislove.  <p>
 
@@ -53,7 +53,7 @@ R.Perera, U.A.Acar, J.Cheney, P.B.Levy.  <b>Functional programs that explain the
 
 J.Ad&aacute;mek, N.Bowler, P.B.Levy, S.Milius. <b>Coproducts of monads on Set</b> in <a href="http://dx.doi.org/10.1109/LICS.2012.16">Proceedings</a>, <a href = "http://www2.informatik.hu-berlin.de/lics/lics12/">27th Annual ACM/IEEE Symposium on Logic in Computer Science</a>, Dubrovnik, Croatia, June 2012, pages 45-54  &copy IEEE Press. Here is an <a href = "coprodmonset.pdf">extended version</a> with proofs.  <p>
 
-L.Aceto, A.Ingólfsdóttir, P.B.Levy, J.Sack.  <b>Characteristic formulae: a general approach</b>.  <a href="char-revised-mscs.pdf">Preprint version</a> dated 18 August 2010.  <a href="http://dx.doi.org/10.1017/S0960129511000375">Mathematical
+L.Aceto, A.Ingólfsdóttir, P.B.Levy, J.Sack.  <b>Characteristic formulae: a general approach</b>.  <a href="char-revised-mscs.pdf">Preprint version</a> dated 2010.  <a href="http://dx.doi.org/10.1017/S0960129511000375">Mathematical
     Structures in Computer Science 22(2)</a>, special issue devoted to papers from EXPRESS 2009, pages 125-173, &copy Cambridge University Press, 2012. <p>
 
 
@@ -71,28 +71,31 @@ S.B.Lassen and P.B.Levy. <b>Typed normal form bisimulation for parametric polymo
 
 P.B.Levy. <b>Global state considered helpful</b> [<a href="globalhelp.pdf">Preprint</a>] Proceedings, <a href="http://www.math.tulane.edu/~mfps/mfps24-site/">24th conference on the Mathematical Foundations of Programming Semantics</a>, University of Pennsylvania, Philadelphia PA USA, May 2008, <a href="http://dx.doi.org/10.1016/j.entcs.2008.10.015">ENTCS</a>, volume 218, pages 241-259 (article 15) &copy Elsevier. <p>
 
-P.B.Levy. <b>Infinite trace equivalence</b> [<a href="finalglpljourn.pdf">Preprint</a>] Annals of Pure and Applied Logic</a>, vol. 151(2-3), pages 170-198, February 2008, special issue for for the 1st workshop on Games for Logic and Programming (GaLoP) 2005 &copy <a href="http://dx.doi.org/10.1016/j.apal.2007.10.007">Elsevier</a>. <p>
+P.B.Levy.<a href="http://dx.doi.org/10.1016/j.apal.2007.10.007"><b>Infinite trace equivalence</b></a> [<a href="finalglpljourn.pdf">Preprint</a>] Annals of Pure and Applied Logic</a>, vol. 151(2-3), pages 170-198, February 2008, special issue for for the 1st workshop on Games for Logic and Programming (GaLoP) 2005 &copy Elsevier.  Expanded version of P.B.Levy. <b>Infinite trace equivalence</b> [<a href="mfpsinftrace.pdf">Preprint</a>]  Proceedings, 21st Conference on the Mathematical Foundations of Programming Semantics, Birmingham, U.K., June 2005, <a href="http://dx.doi.org/10.1016/j.entcs.2005.11.069">ENTCS</a> volume 155 (published 2006), pages 467-496 (article 22)  &copy Elsevier. <p> <p>
 
 S.B.Lassen and P.B.Levy. <b>Typed normal form bisimulation</b> [<a href="LassenLevy2007tnfb-4.pdf">Preprint</a>].  LNCS vol. 4646, J. Duparc and T. A. Henzinger (eds.), Proceedings of the <a href="http://www2.unil.ch/csl07/">6th EACSL Annual Conference on Computer Science and Logic</A> (CSL 07), Lausanne, Switzerland, September 2007, pages 283-297 &copy <a href="http://dx.doi.org/10.1007/978-3-540-74915-8_23"> Springer</a>. <p>
 
 P.B.Levy. <b>Amb breaks well-pointedness, ground amb doesn't</b> [<a href="ambhowenew.pdf">Preprint</a>].  Proceedings of the <a href="http://www.math.tulane.edu/~mfps/mfps23.htm">23rd conference on the Mathematical Foundations of Programming Semantics</a>, New Orleans, April 2007,  <a href="http://dx.doi.org/10.1016/j.entcs.2007.02.036">ENTCS</a>, volume 173, pages 221-239 (article 14) &copy Elsevier. <p>
 
-J.M.E.Hyland, P.B.Levy, G.D.Plotkin and A.J.Power. <b>Combining algebraic effects with continuations</b> [<a href="comb_cont_journal.pdf">Preprint</a>], Festschrift for John Reynolds' 70th birthday, <a href="http://dx.doi.org/10.1016/j.tcs.2006.12.026">Theoretical Computer Science</a>, vol. 375 (1-3), pages 20-40, May 2007 &copy Elsevier.<p>
+J.M.E.Hyland, P.B.Levy, G.D.Plotkin and A.J.Power. <b>Combining algebraic effects with continuations</b> [<a href="comb_cont_journal.pdf">Preprint</a>], Festschrift for John Reynolds' 70th birthday, <a href="http://dx.doi.org/10.1016/j.tcs.2006.12.026">Theoretical Computer Science</a>, vol. 375 (1-3), pages 20-40, May 2007 &copy Elsevier.  Expanded version of <b>Combining continuations with other effects</b> with the same authors, [<a href="http://www.cs.bham.ac.uk/~pbl/papers/comb_cont.ps">Preprint</a>] 4th ACM-SIGPLAN Continuation Workshop, Venice, Italy, January 2004. <p>
 
-P.B.Levy. <b>Call-by-push-value: decomposing call-by-value and call-by-name</b> [<a href="hosc05.pdf">Preprint</a>], Higher-Order and Symbolic Computation, <a href="http://dx.doi.org/10.1007/s10990-006-0480-6">vol. 19(4)</a>, pages 377-414, December 2006 &copy Springer.
+P.B.Levy. <b><a href="http://dx.doi.org/10.1007/s10990-006-0480-6">Call-by-push-value: decomposing call-by-value and call-by-name</a></b> [<a href="hosc05.pdf">Preprint</a>], Higher-Order and Symbolic Computation, volume 19(4), pages 377-414, December 2006 &copy Springer.  Expanded version of P.B.Levy.<a href="https://doi.org/10.1007/3-540-48959-2_17"> <b>Call-by-push-value: a subsuming paradigm (Extended Abstract)</b></a>
+[<A HREF="tlca99.pdf">Preprint</A>]
+ LNCS vol. 1581, J.-Y. Girard, ed.,
+Proceedings, Typed Lambda-Calculi and Applications, L'Aquila, Italy,
+    April 1999, pages 228-242 &copy 
+Springer</A>.
 <p>
 
-P.B.Levy. <b>Jumbo lambda-calculus</b> [<a href="jumboicalp.pdf">Preprint</a>] LNCS vol. 4052, M. Bugliesi, B. Preneel, V. Sassone, I. Wegener (eds.),  Proceedings, <a href="http://icalp06.dsi.unive.it/">33rd International Colloquium on Automata, Languages and Programming, Track B</a>, Venice, Italy, July 2006, Part 2, pages 444-455 &copy <a href="http://dx.doi.org/10.1007/11787006_38"> Springer</a>. <p>  
+P.B.Levy. <a href="http://dx.doi.org/10.1007/11787006_38"><b>Jumbo lambda-calculus</b></a> [<a href="jumboicalp.pdf">Preprint</a>] LNCS vol. 4052, M. Bugliesi, B. Preneel, V. Sassone, I. Wegener (eds.),  Proceedings, <a href="http://icalp06.dsi.unive.it/">33rd International Colloquium on Automata, Languages and Programming, Track B</a>, Venice, Italy, July 2006, Part 2, pages 444-455 &copy Springer. <p>  
 
-P.B.Levy. <b>Monads and adjunctions for global exceptions</b> [<a href="exceptions.pdf">Preprint</a>] Proceedings,  <a href="http://www.math.tulane.edu/~mfps/mfps22.htm">22nd Conference on the Mathematical Foundations of Programming Semantics</a>, Genoa, Italy, May 2006, <a href="http://dx.doi.org/10.1016/j.entcs.2006.04.014">Entcs</a>, volume 158, pages 261-287 (article 14)  &copy Elsevier. <p>
+P.B.Levy. <a href="http://dx.doi.org/10.1016/j.entcs.2006.04.014"><b>Monads and adjunctions for global exceptions</b></a> [<a href="exceptions.pdf">Preprint</a>] Proceedings, 22nd Conference on the Mathematical Foundations of Programming Semantics, Genoa, Italy, 2006, ENTCS volume 158, pages 261-287 (article 14)  &copy Elsevier. <p>
 
-P.B.Levy. <b>Infinitary Howe's method</b> [<a href="howewriteup.pdf">Preprint</a>] Proceedings, <a href="http://conferences.inf.ed.ac.uk/cmcs06/cmcs06.html">8th International Workshop on Coalgebraic Methods in Computer Science</a>, Vienna, Austria, March 2006, <a href="http://www.elsevier.com/gej-ng/31/29/23/show/Products/notes/contents.htt">ENTCS</a> volume 164, issue 1, pages 85-104 (article 6) &copy Elsevier. <p>
+P.B.Levy. <b>Infinitary Howe's method</b> [<a href="howewriteup.pdf">Preprint</a>] Proceedings, 8th International Workshop on Coalgebraic Methods in Computer Science, Vienna, Austria, March 2006, <a href="http://www.elsevier.com/gej-ng/31/29/23/show/Products/notes/contents.htt">ENTCS</a> volume 164, issue 1, pages 85-104 (article 6) &copy Elsevier. <p>
 
 P.B.Levy. <b>Jumping semantics for call-by-push-value</b> [<a href="jumpsem.pdf">Preprint</a>], O. Danvy and H. Thielecke eds., Proceedings, KAZAM Workshop, Birmingham, U.K., June 2005, University of Birmingham technical report CSR-06-10 (appeared 2006), pages 27-40. <p>
 
-P.B.Levy. <b>Infinite trace equivalence</b> [<a href="mfpsinftrace.pdf">Preprint</a>]  Proceedings, 21st Conference on the Mathematical Foundations of Programming Semantics, Birmingham, U.K., June 2005, <a href="http://dx.doi.org/10.1016/j.entcs.2005.11.069">ENTCS</a> volume 155 (published 2006), pages 467-496 (article 22)  &copy Elsevier. <p>
 
-J.M.E.Hyland, P.B.Levy, G.D.Plotkin and A.J.Power. <b>Combining continuations with other effects</b> [<a href="http://www.cs.bham.ac.uk/~pbl/papers/comb_cont.ps">Preprint</a>] <a href="http://www.cs.bham.ac.uk/~hxt/cw04/index.html"> 4th ACM-SIGPLAN Continuation Workshop</a>, Venice, Italy, January 2004.<p>
 
 P.B.Levy, A.J.Power and H.Thielecke. <b><a href="http://dx.doi.org/10.1016/S0890-5401(03)00088-9">Modelling environments in call-by-value programming languages</a></b> &copy Elsevier, Information and Computation, 2003, vol. 185, pp. 182-210.
 <p>
@@ -104,11 +107,9 @@ P.B.Levy. <b>Possible world semantics for general storage in call-by-value</b>
 <p>
 
 P.B.Levy. <a href="http://www.tac.mta.ca/tac/volumes/14/5/14-05abs.html"> <b>Adjunction models for call-by-push-value with stacks</b></a> Theory and Applications of Categories,  volume 14 (2005), article 5 (pages 75-110). 
-<p>
-
-P.B.Levy. <b>Adjunction models for call-by-push-value with stacks</b>
+  Expanded version of P.B.Levy. <a href="https://doi.org/10.1016/S1571-0661(04)80568-1"><b>Adjunction models for call-by-push-value with stacks</b></a>
  [<a href="ctcs02.ps">Preprint</a>]
- Proceedings, <a href="http://www.mathstat.uottawa.ca/lfc/ctcs2002/">Category Theory in Computer Science 2002</a>, Ottawa, August 2002, <A HREF = "http://www.elsevier.com/gej-ng/31/29/23/show/Products/notes/contents.htt">ENTCS</A> vol. 69, article 13 &copy Elsevier.
+ Proceedings, Category Theory in Computer Science 2002, Ottawa, August 2002,  vol. 69, article 13 &copy Elsevier.
 <p> 
 
 P.B,Levy. <a href="http://www.springer.com/uk/home?SGWID=3-102-22-33666497-0&changeHeader=true&referer=www.wkap.nl&SHORTCUT=www.springer.com/prod/b/1-4020-1730-8"><b>Call-by-push-value.  A functional/imperative synthesis</b></a>, Semantic Structures in Computation, &copy Springer, 2004.
@@ -116,13 +117,7 @@ P.B,Levy. <a href="http://www.springer.com/uk/home?SGWID=3-102-22-33666497-0&cha
 
 P.B.Levy. <a href="thesisqmwphd.pdf  "> <b>Call-by-push-value</b></a> PhD thesis, Queen Mary, University of London, 2001.  <p>
 
-P.B.Levy. <b>Call-By-Push-Value: A Subsuming Paradigm (Extended Abstract)</b>
-[<A HREF="tlca99.pdf">Preprint</A>]
- LNCS vol. 1581, J.-Y. Girard, ed.,
-Proceedings, Typed Lambda-Calculi and Applications, L'Aquila, Italy,
-    April 1999, pages 228-242 &copy 
-<A HREF="http://www.springerlink.com/content/lt3xea0x24j4b2ux/?p=ae3bf74ee6d34b679ec67dbc50d5e1b1&pi=16">
-Springer</A>.
+
 <p>
 
 <H2 id = "proceedings">Edited proceedings</h2>
@@ -183,7 +178,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 19:14:40 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 19:50:52 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
