--- a/papers/index.html
+++ b/papers/index.html
@@ -18,7 +18,7 @@ P.B.Levy. <a href ="https://doi.org/10.1093/philmat/nkac011"><b> The Price of Ma
 
 P.B.Levy. <b> Semantics Column: Call-By-Push-Value </b> [<a href="siglogcbpv2.pdf">Preprint</a>], in <a href="https://dl.acm.org/toc/siglog/2022/9/2">ACM SIGLOG News 9(2)</a> pages 7-29, 2022.  With an introduction by Mike Mislove.  <p>
 
-B. Jacobs, P.B.Levy, J.Rot. <a href="https://doi.org/10.1093/logcom/exab050"><b>Steps and Traces</b></a>, Journal of Logic and Computation 31(6), pages 1482-1525, 2021 &copy Oxford Academic.  This is an expanded version of the paper [<a href="stepstraces.pdf">Preprint</a>] in CMCS 2018, which appeared in LNCS 11202 &copy Springer. <p>
+B. Jacobs, P.B.Levy, J.Rot. <a href="https://doi.org/10.1093/logcom/exab050"><b>Steps and Traces</b></a>, Journal of Logic and Computation 31(6), pages 1482-1525, 2021 &copy Oxford Academic.  Expanded version of <a href="https://doi.org/10.1007/978-3-030-00389-0_8"><b>Steps and Traces</b><a> [<a href="stepstraces.pdf">Preprint</a>] by the same authors, in the CMCS 2018 Proceedings, LNCS 11202, pages 122-143 &copy Springer. <p>
 
 P.B.Levy. <a href="https://doi.org/10.14712/1213-7243.2019.029"><b>Strong functors on many-sorted sets</b></a>, Commentationes Mathematicae Universitatis Carolinae 60(4) (2019), special issue in memory of V&#283;ra Trnkov&aacute;. <p>
 
@@ -178,7 +178,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 20:45:46 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 20:50:41 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
