--- a/papers/index.html
+++ b/papers/index.html
@@ -30,7 +30,7 @@ P.B.Levy.  <a href="https://lmcs.episciences.org/4714"><b> A ghost at &omega;<su
 
 M. Devesas Campos, P.B.Levy. <a href="https://doi.org/10.1007/978-3-319-89366-2_4"><b>A syntactic view of computational adequacy</b></a> Proceedings of FoSSaCS 2018, LNCS 10803 &copy Springer. <p>
 
-U.Dal Lago, F.Gavazzo, P.B.Levy.  <a href="https://doi.org/10.1109/LICS.2017.8005117"><b>Effectful Applicative Bisimilarity: Monads, Relators and Howe's Method</b></a> [<a href="http://arxiv.org/abs/1704.04647">Preprint</a> and </a href="https://arxiv.org/abs/1704.04647">long version<a>] in Proceedings of the 32nd Annual ACM/IEEE Symposium on Logic in Computer Science,  LICS 2017 &copy IEEE. <p>
+U.Dal Lago, F.Gavazzo, P.B.Levy.  <a href="https://doi.org/10.1109/LICS.2017.8005117"><b>Effectful Applicative Bisimilarity: Monads, Relators and Howe's Method</b></a> [<a href="http://arxiv.org/abs/1704.04647">Preprint</a> and <a href="https://arxiv.org/abs/1704.04647">long version</a>] in Proceedings of the 32nd Annual ACM/IEEE Symposium on Logic in Computer Science,  LICS 2017 &copy IEEE. <p>
 
 O.Kammar, P.B.Levy, S.Moss, S.Staton. <a href="https://doi.org/10.1109/LICS.2017.8005109"><b>A monad for full ground reference cells</b></a> [<a href="fullgroundkripke.pdf">Preprint</a>]  Proceedings of the 32nd Annual ACM/IEEE Symposium on Logic in Computer Science,  LICS 2017 &copy IEEE.  <p>   
     
@@ -178,7 +178,7 @@ P.B.Levy. <b> Boolean precongruences </b> [<a href="boolprec.pdf"> pdf </a>] <p>
     <hr>
     <address><a href="mailto:P.B.Levy@cs.bham.ac.uk">Paul Blain Levy</a></address>
 <!-- Created: Wed Jan 31 19:52:04 EST 2001 -->
-<!-- hhmts start -->Last modified: Sat Mar 15 20:50:41 GMT 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Mar 15 20:53:36 GMT 2025 <!-- hhmts end -->
   </body>
 </html>
 
